Cleaning up Collectors.toList()