@@ -290,7 +290,7 @@ public class ArchitectureAgent extends AbstractAgent {
             return ((List<?>) obj).stream()
                     .filter(item -> item instanceof String)
                     .map(item -> (String) item)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return new ArrayList<>();
     }
